# base-dango-react

./: .gitignore  pyproject.toml
backend/: urls.py
backend/constants/: google.py
backend/managers/: user.py
backend/migrations/: 0001_initial.py
backend/models/: user.py
backend/serializers/: __init__.py  token.py  user.py
backend/services/: __init__.py  auth.py  mail.py  user.py
backend/templates/emails/: confirm_email.html
backend/views/: user.py
base/models/: custom_model.py
base/views/: __init__.py  custom_viewset.py
core/: settings.py  urls.py
frontend/: config-overrides.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.js
frontend/src/api-service/: authService.js  httpRequest.js
frontend/src/api-services/: cloudinaryService.js  httpRequest.js
frontend/src/app/: App.js
frontend/src/app/store/: authSlice.js
frontend/src/components/: GoogleLoginBT.js  NavBar.js  googleLoginBT.js  mainContainer.js  navBar.js  privateContainer.js  privateRoute.js
frontend/src/constants/: colors.js
frontend/src/pages/: login.js  notfound.js  signup.js  studySet.js
frontend/src/pages/home/: index.js
frontend/src/pages/login/: index.js
frontend/src/pages/signup/: index.js
frontend/src/styles/sass/: index.scss
frontend/src/styles/sass/base/: _layout.scss  _media_queries.scss  _mixins.scss  _variables.scss
frontend/src/styles/sass/components/: _login-register.scss
frontend/src/styles/sass/components/body/: _body-header.scss  _general.scss
frontend/src/utils/: jwt.js  theme.js
(+2 files in other folders)
